# seaflow-multifilter

./: LICENSE.md  README.md
cruises/CMOP_3/: CMOP_3.filter_params.filter.tsv  CMOP_3.filter_params.filter_plan.tsv
cruises/DeepDOM/: DeepDOM.filter_params.filter.tsv  DeepDOM.filter_params.filter_plan.tsv
cruises/GP15_1/: GP15_1.filter_params.filter.tsv  GP15_1.filter_params.filter_plan.tsv
cruises/GP15_2/: GP15_2.filter_params.filter.tsv  GP15_2.filter_params.filter_plan.tsv
cruises/HOT-294/: HOT-294.filter_params.filter.tsv  HOT-294.filter_params.filter_plan.tsv
cruises/HOT297/: HOT297.filter_params.filter.tsv  HOT297.filter_params.filter_plan.tsv
cruises/HOT299/: HOT299.filter_params.filter.tsv  HOT299.filter_params.filter_plan.tsv
cruises/HOT300/: HOT300.filter_params.filter.tsv  HOT300.filter_params.filter_plan.tsv
cruises/HOT301/: HOT301.filter_params.filter.tsv  HOT301.filter_params.filter_plan.tsv
cruises/HOT302/: HOT302.filter_params.filter.tsv  HOT302.filter_params.filter_plan.tsv
cruises/HOT303/: HOT303.filter_params.filter.tsv  HOT303.filter_params.filter_plan.tsv
cruises/HOT304/: HOT304.filter_params.filter.tsv  HOT304.filter_params.filter_plan.tsv
cruises/HOT307/: HOT307.filter_params.filter.tsv  HOT307.filter_params.filter_plan.tsv
cruises/HOT308/: HOT308.filter_params.filter.tsv  HOT308.filter_params.filter_plan.tsv
cruises/HOT309/: HOT309.filter_params.filter.tsv  HOT309.filter_params.filter_plan.tsv
import-existing-filter-params/: .python-version  README.md  import-existing.py  pyproject.toml
(+191 files in other folders)
